--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
    <title>Document</title>
 </head>
 <body>
-   <button class="add-btn" data-idw="divBtn">Add new StopWatch</button>
-   <div id="divBtn"></div>
-   <button class="add-btn" add-idw="divBtn1">Add StapWatch</button>
-   <div id="divBtn1"></div>
+   <button class="add-btn" data-idw="qwe">Add new StopWatch</button>
+   <div id="qwe"></div>
    <script src="main.js"></script>
 </body>
 </html>
